TestCases/Errors/Haversine/observations/sst/sum_08_obs.spm
obs r5-c13 0.00666666666666667
obs r5-c14 0.00666666666666667
obs r6-c14 0.00733333333333333
obs r6-c15 0.00515282131661442
obs r6-c16 0.00689655172413793
obs r7-c16 0.0111678004535147
obs r6-c17 0.00611111111111111
obs r11-c18 0.01
obs r12-c18 0.01
obs r10-c19 0.00461538461538462
obs r11-c19 0.0119230769230769
obs r12-c19 0.0142307692307692
obs r10-c20 0.010224358974359
error_value r5-c13 0.2
error_value r5-c14 0.2
error_value r6-c14 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r6-c17 0.2
error_value r11-c18 0.2
error_value r12-c18 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r10-c20 0.2
